# my-cloud

./: .gitignore  README.md  save.sh
cli-transfer/: Cargo.toml
cli-transfer/src/: main.rs
flutter-transfer/: .gitignore  key.jks  pubspec.yaml
flutter-transfer/android/app/: build.gradle
flutter-transfer/android/app/src/main/: AndroidManifest.xml
flutter-transfer/android/app/src/main/kotlin/com/example/transfer/: MainActivity.kt
flutter-transfer/android/app/src/main/res/values/: styles.xml
flutter-transfer/ios/Runner/: Info.plist
flutter-transfer/ios/Runner.xcodeproj/: project.pbxproj
flutter-transfer/lib/: main.dart
flutter-transfer/linux/: CMakeLists.txt  my_application.cc
flutter-transfer/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter-transfer/macos/Runner/Configs/: AppInfo.xcconfig
flutter-transfer/web/: index.html
flutter-transfer/windows/runner/: Runner.rc
server/: cloud.go  go.mod  index.html
