[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
reqwest = { version = "0.12.9", features = [
    "multipart",
    "cookies",
    "blocking",
    "json",
] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
